--- a/views/inputdraft.html
+++ b/views/inputdraft.html
@@ -20,6 +20,7 @@
 				<tr><td width="10%">Solution : </td><td><input type='textarea' name='solution'></td></tr>
 			</tr>
 			<tr><td colspan=2 align='center'><button type='submit'>submit</button></td></tr>
+			<input type='hidden' name='statement' value='{{document.statement}}'>
 			</form>
 				
 		</table>
