--- a/views/gradefinal.html
+++ b/views/gradefinal.html
@@ -1,6 +1,6 @@
 <html ng-app>
 <head>
-<title>Grade Final Page</title>
+<title>Grade solutions</title>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
@@ -9,7 +9,20 @@
 </head>
 <body>
 
-<h1>Grade Final Page</h1>
+<h1>Grade Solutions</h1>
+<div class='container' >
+<h2 align='center'>Select a problem from the list to grade</h2><br>
+		<table >
+		
+		    <form action='/commentondraft' method='post'>
+				{{#each drafts}}
+			<tr ><td><input type="radio" name="dselected" value="{{this.dno}}" >{{this.username}} : {{this.statement}}</td></tr>
+				{{/each}}
+			<tr><td colspan=2 align='center'><button type='submit'>submit</button></td></tr>
+			</form>
+				
+		</table>
+	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
 	</body>
 </html>
