--- a/views/inputdraft.html
+++ b/views/inputdraft.html
@@ -11,21 +11,38 @@
 
 <div class='container' >
 <h2 align='center'>Input your Draft</h2><br>
-		
+
 		<table >
 			<tr >
 			<form action='/savedraft' method='post'>
 				<td width="10%">Statement :</td><td align='left'>{{document.statement}}</td></tr><tr>
 				<td width="10%"> hint : </td><td align='left'>{{document.hint}}</td></tr>
+
+				{{#if record}}
+				<tr><td width="10%"> draft : </td><td align='left'>{{record.draft}}</td></tr>
+				{{else}}
 				<tr><td width="10%">Solution : </td><td><input type='textarea' name='solution'></td></tr>
-			</tr>
-			<tr><td colspan=2 align='center'><button type='submit'>submit</button></td></tr>
-			<input type='hidden' name='statement' value='{{document.statement}}'>
+				<tr><td colspan=2 align='center'><button type='submit'>submit</button></td></tr>
+				{{/if}}
+				{{#each comments}}
+				<tr><td colspan=2> comment : {{this.comment}} by ({{this.commentby}})</td></tr>
+				{{/each}}
+				{{#if fans_exist}}
+				<tr><td colspan=2>Final answer:{{record.finalans}}</td></tr>
+				{{else}}
+					{{#if final}}
+						<tr><td>Final Solution : </td><td align=left><input type='textarea' name='finalsolution'></td></tr>
+						<tr><td colspan=2 align='center'><button type='submit'>submit</button></td></tr>
+					{{else}}
+					<tr><td colspan=2><p>Please wait as the review is still inprogress.</p></td></tr>
+					{{/if}}
+				{{/if}}
+
+				<input type='hidden' name='statement' value='{{document.statement}}'>
 			</form>
-				
+
 		</table>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
 </body>
 </html>
-
