--- a/views/gradefinal.html
+++ b/views/gradefinal.html
@@ -13,17 +13,16 @@
 <div class='container' >
 <h2 align='center'>Select a problem from the list to grade</h2><br>
 		<table >
-		
-		    <form action='/commentondraft' method='post'>
+
+		    <form action='/' method='post'>
 				{{#each drafts}}
 			<tr ><td><input type="radio" name="dselected" value="{{this.dno}}" >{{this.username}} : {{this.statement}}</td></tr>
 				{{/each}}
 			<tr><td colspan=2 align='center'><button type='submit'>submit</button></td></tr>
 			</form>
-				
+
 		</table>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
 	</body>
 </html>
-
