--- a/views/login.html
+++ b/views/login.html
@@ -6,4 +6,5 @@ Username: <input type='text' name='username'><br>
 Password: <input type='password' name='password'><br>
 
 <button type='submit'>Log in</button>
+<a href="/"><input type='button' value='Cancel' name='Cancel'></a>
 </form>
