second commit july 7

--- a/views/gradeonanswer.html
+++ b/views/gradeonanswer.html
@@ -23,7 +23,7 @@
 				<tr><td width="20%">Feedback : </td><td><input type='textarea' name='feedback'></td></tr>
 				<input type='hidden' name='dno' value='{{draft.dno}}'>
 				<input type='hidden' name='gradeon' value='{{draft.username}}'>
-			<tr><td colspan=2 align='center'><button type='submit'>submit</button></td></tr>
+			<tr><td colspan=2 align='center'><button type='submit'>submit</button><a href="/gradefinal"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
 			</form>
 
 
