--- a/views/inputdraft.html
+++ b/views/inputdraft.html
@@ -22,7 +22,7 @@
 				<tr><td width="10%"> draft : </td><td align='left'>{{record.draft}}</td></tr>
 				{{else}}
 				<tr><td width="10%">Solution : </td><td><input type='textarea' name='solution'></td></tr>
-				<tr><td colspan=2 align='center'><button type='submit'>submit</button></td></tr>
+				<tr><td colspan=2 align='center'><button type='submit'>submit</button><a href="/selectmodule"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
 				{{/if}}
 				{{#each comments}}
 				<tr><td colspan=2> comment : {{this.comment}} by ({{this.commentby}})</td></tr>
@@ -40,7 +40,7 @@
 				{{else}}
 					{{#if final}}
 						<tr><td>Final Solution : </td><td align=left><input type='textarea' name='finalsolution'></td></tr>
-						<tr><td colspan=2 align='center'><button type='submit'>submit</button></td></tr>
+						<tr><td colspan=2 align='center'><button type='submit'>submit</button><a href="/selectmodule"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
 					{{else}}
 					<tr><td colspan=2><p>Please wait as the review is still inprogress.</p></td></tr>
 					{{/if}}
