--- a/views/signup.html
+++ b/views/signup.html
@@ -11,5 +11,6 @@
 <tr><th>email:</th><th><input type="email" name="email" /></th></tr>
 <tr><th>User Role: </th><th><select name="userrole"><option value="student">Student</option><option value="admin">Admin</option> </select></th></tr>
 
-<tr><th colspan=2><button type='submit'>Sign up</button></th></tr></table>
+<tr><th colspan=2><button type='submit'>Sign up</button><a href="/logout"><input type='button' value='Cancel' name='Cancel'></a></th></tr></table>
+
 </form>
