--- a/views/userscreen.html
+++ b/views/userscreen.html
@@ -11,7 +11,7 @@
 
 <table align="Center">
     <tr>
-		<td width="20%">  <a href="/drafts">    <div style="height:100%;width:100%">      Your Drafts    </div>  </a></td>
+		<td width="20%">  <a href="/selectmodule">    <div style="height:100%;width:100%">      Your Drafts    </div>  </a></td>
 		 <td width="20%">  <a href="/reviewdrafts">    <div style="height:100%;width:100%">      Review Drafts    </div>  </a></td>
 		 <td width="20%">  <a href="/gradefinal">    <div style="height:100%;width:100%">      Grade Final    </div>  </a></td>
         
