--- a/views/drafts.html
+++ b/views/drafts.html
@@ -18,7 +18,7 @@
 				{{#each stmtdata}}
 			<tr ><td><input type="radio" name="selected" value="{{this.sno}}" >{{this.statement}}</td></tr>
 				{{/each}}
-			<tr><td colspan=2 align='center'><button type='submit'>submit</button></td></tr>
+			<tr><td colspan=2 align='center'><button type='submit'>submit</button> <a href="/selectmodule"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
 			</form>
 				
 		</table>
