--- a/views/enterdata.html
+++ b/views/enterdata.html
@@ -1,8 +1,9 @@
 <form action='/enterdata' method='post'>
 <table align='center'>
+<tr><th>Module number: </th><th><select name="moduleno"><option value="m1">m1</option><option value="m2">m2</option><option value="m3">m3</option><option value="m4">m4</option> </select></th></tr>
 <tr><th>Statement: </th><th><input type='textarea' name='statement'></th></tr>
 <tr><th>Hint: </th><th><input type='text' name='hint'></th></tr>
 <tr><th>Solution: </th><th><input type='textarea' name='solution'></th></tr>
 
-<tr><th colspan=2><button type='submit'>submit</button></th></tr></table>
+<tr><th colspan=2><button type='submit'>submit</button><a href="/logout"><input type='button' value='Cancel' name='Cancel'></a></th></tr></table>
 </form>
