--- a/views/selectmodule.html
+++ b/views/selectmodule.html
@@ -1,6 +1,6 @@
 <html ng-app>
 <head>
-<title>Grade solutions</title>
+<title>module Page</title>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
@@ -9,25 +9,19 @@
 </head>
 <body>
 
-<h1>Grade Solutions</h1>
+
 <div class='container' >
-<h2 align='center'>Select a problem from the list to grade</h2><br>
+<h2 align='center'>Select a module from the list</h2><br>
 		<table >
-
-		    <form action='/gradeonanswer' method='post'>
-
-				{{#if drafts}}
-				{{#each drafts}}
-			<tr ><td><input type="radio" name="dselected" value="{{this.dno}}" >{{this.username}} : {{this.statement}}</td></tr>
-				{{/each}}
+		
+		    <form action='/drafts' method='post'>
+				<tr><td colspan=2 align='center'>Module number: </th><th><select name="moduleno"><option value="m1">m1</option><option value="m2">m2</option><option value="m3">m3</option><option value="m4">m4</option> </select></td</tr>
 			<tr><td colspan=2 align='center'><button type='submit'>submit</button><a href="/userscreen"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
-			{{else}}
-			<tr><td colspan=2> No problems Availale to grade</td></tr>
-			{{/if}}
 			</form>
-
+				
 		</table>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
 	</body>
 </html>
+
