--- a/views/gradefinal.html
+++ b/views/gradefinal.html
@@ -9,24 +9,24 @@
 </head>
 <body>
 
-<h1>Grade Solutions</h1>
 <div class='container' >
-<h2 align='center'>Select a problem from the list to grade</h2><br>
+	{{#if drafts}}
+<br>
 		<table >
 
 		    <form action='/gradeonanswer' method='post'>
 
-				{{#if drafts}}
 				{{#each drafts}}
 			<tr ><td><input type="radio" name="dselected" value="{{this.dno}}" >{{this.username}} : {{this.statement}}</td></tr>
 				{{/each}}
 			<tr><td colspan=2 align='center'><button type='submit'>submit</button><a href="/userscreen"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
-			{{else}}
-			<tr><td colspan=2> No problems Availale to grade</td></tr>
-			{{/if}}
+
 			</form>
 
 		</table>
+		{{else}}
+		<h2 align='center'>Problems are not available to grade</h2>
+		{{/if}}
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
 	</body>
