--- a/views/index.html
+++ b/views/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
 <div class='container' >
+	<h2 align=center> Please login to access the features of website </h2>
 <h2 align='center'>List Of Problems</h2><br>
 		<table class='table'>
 		<thead>
 			<tr><th>sno</th><th>Statement</th>
- 
+
 			<th>hint </th></tr>
 		</thead>
 		<tbody>
@@ -31,4 +32,3 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
 	</body>
 </html>
-
