--- a/views/drafts.html
+++ b/views/drafts.html
@@ -10,6 +10,7 @@
 <body>
 
 <div class='container' >
+	{{#if stmtdata}}
 <h2 align='center'>Select a problem from the list</h2><br>
 		<table >
 
@@ -21,6 +22,9 @@
 			</form>
 
 		</table>
+		{{else}}
+		<h2 align='center'>No problems available in this module</h2>
+		{{/if}}
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
 	</body>
