--- a/views/selectmodule.html
+++ b/views/selectmodule.html
@@ -11,15 +11,8 @@
 
 
 <div class='container' >
-<h2 align='center'>Select a module from the list</h2><br>
-		<table >
-
-		    <form action='/drafts' method='post'>
-				<tr><td colspan=2 align='center'>Module number: </th><th><select name="moduleno"><option value="m1">m1</option><option value="m2">m2</option><option value="m3">m3</option><option value="m4">m4</option> </select></td</tr>
-			<tr><td colspan=2 align='center'><br><button type='submit'>submit</button><a href="/userscreen"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
-			</form>
-
-		</table>
+<h2 align='center'>Select a module from the Left Panel</h2><br>
+		
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
 	</body>
