Commit 2 on 14th july

--- a/views/commentondraft.html
+++ b/views/commentondraft.html
@@ -22,7 +22,7 @@
 				<tr><td width="20%">comment : </td><td><input type='textarea' name='comment'></td></tr>
 				<input type='hidden' name='dno' value='{{draft.dno}}'>
 				<input type='hidden' name='commenton' value='{{draft.username}}'>
-			<tr><td colspan=2 align='center'><button type='submit'>submit</button></td></tr>
+			<tr><td colspan=2 align='center'><button type='submit'>submit</button><a href="/selectmodule"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
 			</form>
 
 
