--- a/views/inputdraft.html
+++ b/views/inputdraft.html
@@ -42,7 +42,7 @@
 					{{/if}}
 				{{/if}}
 				{{else}}
-				<tr><td width="10%">Solution : </td><td><input type='textarea' name='solution'></td></tr>
+				<tr><td width="10%">Draft : </td><td><input type='textarea' name='solution'></td></tr>
 				<tr><td colspan=2 align='center'><button type='submit'>submit</button><a href="/selectmodule"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
 				{{/if}}
 
