--- a/views/success.html
+++ b/views/success.html
@@ -11,7 +11,8 @@
 
 
 <div class='container' >
-<h2 align='center'>Select an Option from the Left Panel</h2><br>
+  <h3 align='center'>Data Recieved Successfully....</h3><br>
+<h3 align='center'>Select an Option from the Left Panel</h3><br>
 
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
