--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
 				{{#each stmtdata}}
 			<tr >
 				<td>{{this.sno}}</td>
-				<td>{{this.statement}}</td>
+				<td>{{this.problem}}</td>
 				<td>{{this.hint}}</td>
 			</tr>
 				{{/each}}
