--- a/views/createmodule.html
+++ b/views/createmodule.html
@@ -1,9 +1,6 @@
-<center><a href="/createnewcourse">Create New Course</a> || <a href="/modifycourse">Modify Existing Course</a> || <a href="/courseemail">Course Mail</a></center>
 <center><h2> Create New Module</h2></center>
 <form action='/createmodule' method='post'>
 <table align='center'>
-<tr><th>Module Name: </th><th><input type='textarea' name='coursename'></th></tr>
-<tr><th>Upload a .csv file with List of students: </th><th><input type='file' name='csvfile'></th></tr>
-
+<tr><th>Module Name: </th><th><input type='text' name='modulename' required></th></tr>
 <tr><th colspan=2><button type='submit'>upload</button><a href="/admin"><input type='button' value='Cancel' name='Cancel'></a></th></tr></table>
 </form>
