--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -5,7 +5,8 @@
 <div id='header'>
 {{#if user}}
 Logged in as: <b>{{user.firstname}} {{user.lastname}}</b>.
-<a href='/logout'>Logout</a>
+<a href='/logout'>Logout</a> |
+<a href='/studsettings'>Settings</a>
 {{else}}
 <a href='/login'>Login</a> | <a href='/signup'>Sign up</a>
 {{/if}}
