--- a/views/login.html
+++ b/views/login.html
@@ -1,10 +1,11 @@
 {{#if badCredentials}}
 <p>The login information you entered is not correct.</p>
 {{/if}}
-<form action='/login' method='post'>
-Username: <input type='text' name='username'><br>
+<form action='/login' method='post'name='login' >
+Username: <input type='text' name='username' id="userid"><br>
 Password: <input type='password' name='password'><br>
 
 <button type='submit'>Log in</button>
 <a href="/"><input type='button' value='Cancel' name='Cancel'></a>
 </form>
+<a href="/pwdresetform"+document.getElementById("userid")> Forgot Password</a>
