--- a/views/pwdreset.html
+++ b/views/pwdreset.html
@@ -6,7 +6,7 @@
 <tr><th>Security Question : </th><th>{{question}}</th></tr>
 <tr><th>Answer: </th><th><input type='text' name='answer'></th></tr>
 <tr><th>New Password : </th><th><input type='password' name='newpassword'></th></tr>
-<input type='hidden' name='username' value='{{userdata.username}}'>
+<input type='hidden' name='username' value='{{username}}'>
 <input type='hidden' name='question' value='{{question}}'>
 <tr><th colspan=2><button type='submit'>Change Password</button> &nbsp;<a href="/"><input type='button' value='Cancel' name='Cancel'></a></th></tr></table>
 
