--- a/views/pwdresetform.html
+++ b/views/pwdresetform.html
@@ -1,4 +1,4 @@
-<form action='/pwdreset' method='get' >
+<form action='/pwdreset' method='post' >
 Username: <input type='text' name='username' ><br>
 <button type='submit'>Submit</button>
 <a href="/"><input type='button' value='Cancel' name='Cancel'></a>
