--- a/views/drafts.html
+++ b/views/drafts.html
@@ -16,7 +16,7 @@
 
 		    <form action='/inputdraft' method='post'>
 				{{#each stmtdata}}
-			<tr ><td><input type="radio" name="selected" value="{{this.sno}}" >{{this.statement}}</td></tr>
+			<tr ><td><input type="radio" name="selected" value="{{this.sno}}" >{{this.problem}}</td></tr>
 				{{/each}}
 			<tr><td colspan=2 align='center'><button type='submit'>submit</button> <a href="/selectmodule"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
 			</form>
