--- a/views/login.html
+++ b/views/login.html
@@ -8,4 +8,4 @@ Password: <input type='password' name='password'><br>
 <button type='submit'>Log in</button>
 <a href="/"><input type='button' value='Cancel' name='Cancel'></a>
 </form>
-<a href="/pwdresetform"+document.getElementById("userid")> Forgot Password</a>
+<a href="/pwdresetform"> Forgot Password</a>
