commit on 7th  august

--- a/views/updatecourse.html
+++ b/views/updatecourse.html
@@ -8,4 +8,4 @@ Available modules in the course :<br>
 <a href="/modpop?modName={{this.modulename}}">{{this.modulename}}</a><br>
 {{/each}}
 <h3><a href='/createmodule'>Create Module</a>
-<h4><a href="/">Enroll students</a></h4></center>
+<h4><a href="/enrollstudents">Enroll students</a></h4></center>
