--- a/views/inputdraft.html
+++ b/views/inputdraft.html
@@ -15,7 +15,7 @@
 		<table >
 			<tr >
 			<form action='/savedraft' method='post'>
-				<td width="10%">Statement :</td><td align='left'>{{document.statement}}</td></tr><tr>
+				<td width="10%">Statement :</td><td align='left'>{{document.problem}}</td></tr><tr>
 				<td width="10%"> hint : </td><td align='left'>{{document.hint}}</td></tr>
 
 				{{#if record}}
