--- a/views/uploadstudents.html
+++ b/views/uploadstudents.html
@@ -4,5 +4,5 @@
 <tr><th> Student username: </th><th><input type='textarea' name='sname'></th></tr>
 
 
-<tr><th colspan=2><button type='submit'>submit</button>&nbsp;<a href="/logout"><input type='button' value='Cancel' name='Cancel'></a></th></tr></table>
+<tr><th colspan=2><button type='submit'>submit</button>&nbsp;<a href="/admin"><input type='button' value='Cancel' name='Cancel'></a></th></tr></table>
 </form>
