commit on aug 12

--- a/views/commentondraft.html
+++ b/views/commentondraft.html
@@ -17,7 +17,7 @@
 
 
 			<form action='/savecomment' method='post'>
-				<td width="20%">Statement :</td><td align='left'>{{draft.statement}}</td></tr><tr>
+				<td width="20%">Problem :</td><td align='left'>{{draft.problem}}</td></tr><tr>
 				<td width="20%"> Draft : </td><td align='left'>{{draft.draft}}</td></tr>
 				<tr><td width="20%">comment : </td><td><input type='textarea' name='comment'></td></tr>
 				<input type='hidden' name='dno' value='{{draft.dno}}'>
