--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
 <h2 align='center'>List Of Problems</h2><br>
 		<table class='table'>
 		<thead>
-			<tr><th>sno</th><th>Statement</th>
+			<tr><th>sno</th><th>Problem</th>
 
 			<th>hint </th></tr>
 		</thead>
