--- a/views/moduleproblems.html
+++ b/views/moduleproblems.html
@@ -14,7 +14,7 @@
 <h2 align='center'>List Of Problems in the module</h2><br>
 		<table class='table'>
 		<thead>
-			<tr><th>sno</th><th>Statement</th>
+			<tr><th>sno</th><th>Problem</th>
 
 			<th>hint </th></tr>
 		</thead>
