--- a/views/gradefinal.html
+++ b/views/gradefinal.html
@@ -18,7 +18,7 @@
 		    <form action='/gradeonanswer' method='post'>
 
 				{{#each drafts}}
-			<tr ><td><input type="radio" name="dselected" value="{{this.dno}}" >{{this.username}} : {{this.statement}}</td></tr>
+			<tr ><td><input type="radio" name="dselected" value="{{this.dno}}" >{{this.username}} : {{this.problem}}</td></tr>
 				{{/each}}
 			<tr><td colspan=2 align='center'><button type='submit'>submit</button><a href="/userscreen"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
 
