--- a/views/uploadprblms.html
+++ b/views/uploadprblms.html
@@ -1,7 +1,7 @@
 <form action='/enterdata' method='post'>
 <table align='center'>
 
-<tr><th>Problem: </th><th><input type='textarea' name='statement'></th></tr>
+<tr><th>Problem: </th><th><input type='textarea' name='problem'></th></tr>
 <tr><th>Hint: </th><th><input type='text' name='hint'></th></tr>
 <tr><th>Solution: </th><th><input type='textarea' name='solution'></th></tr>
 
