--- a/views/usercourses.html
+++ b/views/usercourses.html
@@ -1,11 +1,6 @@
-<center><h3> Select acourse from the following</h3>
+<center><h3> Select a course from the following</h3>
 
   {{#each courses}}
-  <tr><th>
-  <form id="{{this.courseId}}" action='/userscreen' target="iframe_a" method='post'>
-<!-- Your Form -->
-	<input type='hidden' name='courseId' value='{{this.courseId}}' >
-<a href="javascript:{}" onclick="document.getElementById('{{this.courseId}}').submit(); return false;">{{this.courseName}}</a>
-</form></th></tr>
+  <a href="/userscreen?courseId={{this.courseId}}">{{this.courseId}}</a><br>
 {{/each}}
 </center>
