--- a/views/gradefinal.html
+++ b/views/gradefinal.html
@@ -6,6 +6,16 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    tex2jax: {
+      inlineMath: [["$","$"],["\\(","\\)"]]
+    }
+  });
+</script>
+<script type="text/javascript"
+  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full">
+</script>
 </head>
 <body>
 
@@ -18,7 +28,7 @@
 		    <form action='/gradeonanswer' method='post'>
 
 				{{#each drafts}}
-			<tr ><td><input type="radio" name="dselected" value="{{this.dno}}" >{{this.username}} : {{this.problem}}</td></tr>
+			<tr ><td><input type="radio" name="dselected" value="{{this.dno}}" >{{this.username}} : ${{{this.problem}}}$</td></tr>
 				{{/each}}
 			<tr><td colspan=2 align='center'><button type='submit'>submit</button><a href="/userscreen"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
 
