--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -1,7 +1,8 @@
 <html>
 <head>
+  <title>Peer Review System</title>
 </head>
-<body>
+<body >
 <div id='header'>
 {{#if user}}
 Logged in as: <b>{{user.firstname}} {{user.lastname}}</b>.
