--- a/views/moduleproblems.html
+++ b/views/moduleproblems.html
@@ -32,7 +32,7 @@
 				{{#each stmtdata}}
 			<tr >
 				<td>{{this.sno}}</td>
-				<td>${{{this.problem}}}$</td>
+				<td><div  style='white-space: pre-wrap'>{{this.problem}}</div></td>
 				<td>{{this.hint}}</td>
 			</tr>
 				{{/each}}
