--- a/views/commentondraft.html
+++ b/views/commentondraft.html
@@ -25,10 +25,9 @@
 		<table >
 			<tr >
 
-
 			<form action='/savecomment' method='post'>
-				<td width="20%">Problem :</td><td align='left'>${{{draft.problem}}}$</td></tr><tr>
-				<td width="20%"> Draft : </td><td align='left'>${{{draft.draft}}}$</td></tr>
+				<td width="20%">Problem :</td><td align='left'><div  style='white-space: pre-wrap'>{{draft.problem}}</div></td></tr><tr>
+				<td width="20%"> Draft : </td><td align='left'><div  style='white-space: pre-wrap'>{{draft.draft}}</div></td></tr>
 				<tr><td width="20%">comment : </td><td><input type='textarea' name='comment'></td></tr>
 				<input type='hidden' name='dno' value='{{draft.dno}}'>
 				<input type='hidden' name='commenton' value='{{draft.username}}'>
