--- a/views/drafts.html
+++ b/views/drafts.html
@@ -26,7 +26,7 @@
 
 		    <form action='/inputdraft' method='post'>
 				{{#each stmtdata}}
-			<tr ><td><input type="radio" name="selected" value="{{this.sno}}" >${{{this.problem}}}$</td></tr>
+			<tr ><td><input type="radio" name="selected" value="{{this.sno}}" ><lable  style='white-space: pre-wrap'>{{this.problem}}</lable></td></tr>
 				{{/each}}
 			<tr><td colspan=2 align='center'><button type='submit'>submit</button> <a href="/selectmodule"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
 			</form>
