--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,10 @@
       inlineMath: [["$","$"],["\\(","\\)"]]
     }
   });
+
 </script>
+
+
 <script type="text/javascript"
   src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full">
 </script>
@@ -31,13 +34,13 @@
 				{{#each stmtdata}}
 			<tr >
 				<td>{{this.sno}}</td>
-				<td>${{{this.problem}}}$</td>
+				<td><div  style='white-space: pre-wrap'>{{this.problem}}</div></td>
 				<td>{{this.hint}}</td>
 			</tr>
 				{{/each}}
 		</tbody>
 		</table>
-	</div>
+    </div>
 </ul>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
 	</body>
