--- a/views/inputdraft.html
+++ b/views/inputdraft.html
@@ -25,7 +25,7 @@
 		<table >
 			<tr >
 			<form action='/savedraft' method='post'>
-				<td width="10%">Problem :</td><td align='left'>${{{document.problem}}}$</td></tr><tr>
+				<td width="10%">Problem :</td><td align='left'><div  style='white-space: pre-wrap'>{{document.problem}}</div></td></tr><tr>
 				<td width="10%"> hint : </td><td align='left'>{{document.hint}}</td></tr>
 
 				{{#if record}}
@@ -34,7 +34,7 @@
 				<tr><td colspan=2> comment : {{this.comment}} by ({{this.commentby}})</td></tr>
 				{{/each}}
 				{{#if fans_exist}}
-					<tr><td colspan=2>Final answer:${{{record.finalans}}}$</td></tr>
+					<tr><td colspan=2>Final answer:<lable  style='white-space: pre-wrap'>{{record.finalans}}</lable></td></tr>
 					{{#if gradedata}}
 						{{#each gradedata}}
 							<tr><td colspan=2> feedback : {{this.feedback}} by ({{this.gradeby}}) Grade : {{this.grade}}</td></tr>
