--- a/views/admin.html
+++ b/views/admin.html
@@ -1,3 +1,3 @@
 
 <br><br><br><br><br>
-<center><a href="/createnewcourse">Create New Course</a> || <a href="/modifycourse">Modify Existing Course</a> || <a href="/courseemail">Course Mail</a></center>
+<center><a href="/courseview">Course View</a> || <a href="/createnewcourse">Create New Course</a> || <a href="/modifycourse">Modify Existing Course</a> || <a href="/courseemail">Course Mail</a></center>
