--- a/views/inputdraft.html
+++ b/views/inputdraft.html
@@ -41,24 +41,41 @@
 						{{/each}}
 						{{/if}}
 						{{#if avg_exist}}
-							<tr><td colspan=2> Final grade is : {{avg}}</td></tr>
+							<tr><td colspan=2> Final grade is : <b>{{avg}}</b></td></tr>
+              {{#if record.mygrade}}
+              <tr><td colspan=2>Grade given by you : {{record.mygrade}}</td></tr>
+              <tr><td colspan=2>Your Feedback on the grader : {{record.myfeedback}}</td></tr>
+              {{else}}
+              <tr><td>Grade yourself for this problem:</td><td><input type="radio" name="mygrade" value=1 > 1 <input type="radio" name="mygrade" value=2 > 2 <input type="radio" name="mygrade" value=3 > 3 <input type="radio" name="mygrade" value=4 > 4 <input type="radio" name="mygrade" value=5 > 5 </td></tr>
+      				<tr><td width="20%">your Feedback on the grader : </td><td><input type='textarea' name='myfeedback'></td></tr>
+              <tr><td colspan=2 align='center'><button type='submit'>submit</button><a href="/selectmodule"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
+              {{/if}}
 						{{/if}}
 				{{else}}
 					{{#if final}}
-						<tr><td>Final Solution : </td><td align=left><input type='textarea' name='finalsolution'></td></tr>
-						<tr><td colspan=2 align='center'><button type='submit'>submit</button><a href="/selectmodule"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
-					{{else}}
+          {{#if temprecord.finalans}}
+                <tr><td width="10%">Final Solution : </td><td><textarea name='finalsolution'>{{temprecord.finalans}}</textarea></td></tr>
+          {{else}}
+                <tr><td width="10%">Final Solution : </td><td><textarea  name='finalsolution'></textarea></td></tr>
+          {{/if}}
+            <tr><td colspan=2 ><input type='submit' value="Save" formaction="/savetempdraft" />&nbsp;<input type='submit' value="Submit" name="submit"/>&nbsp;<a href="/selectmodule"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
+          {{else}}
 					<tr><td colspan=2><p>Please wait as the review is still inprogress.</p></td></tr>
 					{{/if}}
 				{{/if}}
 				{{else}}
-				<tr><td width="10%">Draft : </td><td><input type='textarea' name='solution'></td></tr>
-				<tr><td colspan=2 align='center'><button type='submit'>submit</button><a href="/selectmodule"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
+          {{#if temprecord.draft}}
+				        <tr><td width="10%">Draft : </td><td><textarea name='solution'>{{temprecord.draft}}</textarea></td></tr>
+          {{else}}
+                <tr><td width="10%">Draft : </td><td><textarea  name='solution'></textarea></td></tr>
+          {{/if}}
+				        <tr><td colspan=2 ><input type='submit' value="Save" formaction="/savetempdraft" />&nbsp;<input type='submit' value="Submit" name="submit"/>&nbsp;<a href="/selectmodule"><input type='button' value='Cancel' name='Cancel'></a></td></tr>
 				{{/if}}
 
 
 				<input type='hidden' name='problem' value='{{document.problem}}'>
 				<input type='hidden' name='sno' value='{{document.sno}}'>
+        <input type='hidden' name='dno' value='{{record.dno}}'>
 			</form>
 
 		</table>
