--- a/views/moduleproblems.html
+++ b/views/moduleproblems.html
@@ -19,25 +19,29 @@
 </head>
 <body>
 <div class='container' >
-  <center><a href="/createnewcourse">Create New Course</a> || <a href="/modifycourse">Modify Existing Course</a> || <a href="/courseemail">Course Mail</a></center>
-
-<h2 align='center'>List Of Problems in the module</h2><br>
+  <h2 align='center'>List Of Problems in <b>{{modulename}}</b> module</h2><br>
 		<table class='table'>
 		<thead>
 			<tr><th>sno</th><th>Problem</th>
-
-			<th>hint </th></tr>
+			<th>hint </th><th>UPDATE</th><th>DELETE</th></tr>
 		</thead>
 		<tbody>
 				{{#each stmtdata}}
-			<tr >
+        <form id="{{this.sno}}" action='/' method='post'>
+      <!-- Your Form -->
+      	<input type='hidden' name='sno' value='{{this.sno}}' >
+			     <tr >
 				<td>{{this.sno}}</td>
 				<td><div  style='white-space: pre-wrap'>{{this.problem}}</div></td>
 				<td>{{this.hint}}</td>
+        <td><input type="submit" formaction="/update" value="Update"></td><td><input type="submit" formaction="/delete" value="Delete"></td>
 			</tr>
+    </form>
 				{{/each}}
 		</tbody>
 		</table>
+    <br><br>
+    <center><a href="/admin">Home</a></center>
 	</div>
 </ul>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
