--- a/views/uploadprblms.html
+++ b/views/uploadprblms.html
@@ -2,11 +2,16 @@
 <body>
   <form action='/enterdata' method='post'>
 <table align='center'>
-
+{{#if result}}
+	<input type='hidden' name='sno' value='{{result.sno}}' >
+<tr><th>Problem: </th><th><textarea rows="10" cols="75" name='problem'>{{result.problem}}</textarea></th></tr>
+<tr><th>Hint: </th><th><textarea rows="2" cols="75" name='hint'>{{result.hint}}</textarea></th></tr>
+<tr><th>Solution: </th><th><textarea rows="5" cols="75"  name='solution'>{{result.solution}}</textarea></th></tr>
+{{else}}
 <tr><th>Problem: </th><th><textarea rows="10" cols="75" name='problem'></textarea></th></tr>
 <tr><th>Hint: </th><th><textarea rows="2" cols="75" name='hint'></textarea></th></tr>
 <tr><th>Solution: </th><th><textarea rows="5" cols="75"  name='solution'></textarea></th></tr>
-
+{{/if}}
 <tr><th colspan=2><button type='submit'>submit</button>&nbsp;<a href="/logout"><input type='button' value='Cancel' name='Cancel'></a></th></tr></table>
 </form>
 </body>
